# rick_and_morty

./: .gitignore  README.md  db_manager.py  main.py  pyproject.toml  requirements.txt  rick.sqlite  rick_api.py  rick_classes.py  vercel.json
templates/: character.html  gallery.html  header.html  index.html  loc_list.html  location.html  null.html
