[project]
name = "rick-and-morty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "blinker==1.8.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "dominate==2.9.1",
    "Flask==2.2.5",
    "Flask-Bootstrap==3.3.7.1",
    "Flask-Ext==0.1",
    "flask-markdown>=0.3",
    "greenlet==3.0.3",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==2.1.5",
    "requests>=2.32.5",
    "SQLAlchemy==2.0.32",
    "typing_extensions==4.12.2",
    "visitor==0.1.3",
    "Werkzeug==3.0.3",
]
